--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /**
   |============================
   | палитра кольорів
@@ -21,8 +20,14 @@
 
 }
 
+.colot text {
+	--nav-txt-color: var(--navy-blue)
+}
+
+.color-hover {}
+
 body {
-	font-family: Roboto,Arial, Helvetica, sans-serif;
+	font-family: Roboto, Arial, Helvetica, sans-serif;
 
 
 }
@@ -32,60 +37,63 @@ body {
 
 /**
   |============================
+  | header-hover
+  |============================
+*/
+
+.header-link:hover {
+	color:#404bbf;
+}
+
+.header-link-email:hover {
+	color:#404bbf;
+}
+
+/**
+  |============================
   | Header style
   |============================
 */
 
-.header    {
+.header {}
+
+.header-nav {}
+ 
+
+	
 
 
+
+.header-logo {}
+
+.header-item {
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: ;
 }
-
-.header-nav {
-
-
-}
-.header-logo{
-
-}
-.header-item{
-
-}
+	
 
 .header-link{
-
-
-}
-.header-address{
-
-}
-
-.header-item-addres{
-
-}
-.header-link-addres{
-    
-}
-
-.main-section{
-
-}
-.main-caption{
-background-color: #4d5ae5;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color:#2e2f42 ;
 
 }
 
+.header-address: {}
+
+.header-item-addres {}
 
 
 
+.header-link-addres {}
 
+.main-section {}
 
-
-
-.best {
-cursor: pointer;
-font-style: normal;
-font-weight: 400;
-background-color: red;
-
-}
+.main-caption {}
