--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 16px;
-	line-height: 1.5x;
+	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--addres-txt-cl);
 }
