--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@
 
 body {
 	background-color: #ffffff;
-	font-family: Roboto, Arial, Helvetica, sans-serif;
+	color: #434455;
+	font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .list{
