--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ link {
 
 .list {
 	background-color: #FFFFFF;
-
+	list-style: none;
 
 }
 
@@ -263,7 +263,7 @@ link {
 	text-decoration: none;
 
 }
-
+/* logo portfolio  */
 .logo-portfolio {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 800;
@@ -279,6 +279,21 @@ color: #2e2f42;
 
 }
 
+
+
+
+.portfolio-addres{
+font-style: normal;
+	 
+}
+
+.address-navigation{
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em; 
+	color:  #434455;
+
+}
 
 
 /* button */
