--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,14 @@
 	--portfolio-btn-cl: var(--cloud)
 }
 
+.list{
+	list-style: none;
+	
+}
+
+.link {
+	text-decoration: none
+}
 
 
 
@@ -39,9 +47,7 @@ body {
 	font-family: "Roboto", sans-serif;
 }
 
-.list {
-	list-style: none;
-}
+
 
 /**
   |============================
@@ -92,10 +98,6 @@ body {
 	color: var(--portfolio-btn-cl);
 }
 
-
-link {
-	text-decoration: none
-}
 
 /**
 
@@ -231,11 +233,7 @@ link {
 
 }
 
-.list {
-	background-color: #FFFFFF;
-	list-style: none;
 
-}
 
 
 .box {
@@ -259,10 +257,7 @@ link {
 */
 
 /* header-portfolio */
-link {
-	text-decoration: none;
 
-}
 /* logo portfolio  */
 .logo-portfolio {
 	font-family: 'Raleway', sans-serif;
