--- a/css/style.css
+++ b/css/style.css
@@ -351,10 +351,13 @@ body {
 /* button */
 all-button {
 	font-family: "Roboto", sans-serif;
+	font-style: normal;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
+	display: flex;
+	align-items: center;
+	text-align: center;
 	letter-spacing: 0.04em;
-	color: #4d5ae5;
-	background-color: #F4F4FD;
+	color: #FFFFFF;
 }
