--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
    | hover
    |============================
  */
-.header-link link:hover {
+.header-link:hover {
 	color: #404bbf;
 }
 
@@ -126,7 +126,7 @@ body {
   |============================
 */
 /* html  */
-.header-link link:focus {
+.header-link :focus {
 	color: #404bbf;
 
 }
