--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ body {
 	line-height: 1.5;
 	align-items: center;
 	letter-spacing: 0.04em;
-	color: var(--main-caption-cl);
+	color: #ffffff;
 	background-color: var(--main-btn-color);
 	font-family: "Roboto", sans-serif;
 	cursor: pointer;
