--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ body {
 	letter-spacing: 0.02em;
 	color: var(--main-txt-cl);
 	text-transform: capitalize;
-	background-color: #F4F4FD;
+	background-color:#FFFFFF;
 }
 
 .section-the-end {
