--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,7 @@ body {
 
 
 .navigation-button {
+	font-family: 'Roboto' sans-serif;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 16px;
@@ -384,6 +385,6 @@ body {
 	letter-spacing: 0.04em;
 	color: #4D5AE5;
 	background: #F4F4FD;
-
+	cursor: pointer;
 
 }
