--- a/css/style.css
+++ b/css/style.css
@@ -368,13 +368,8 @@ body {
 
 /* button */
 
-
-
-
-
-
 .navigation-button {
-	font-family: 'Roboto' sans-serif;
+	font-family: "Roboto", sans-serif;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 16px;
@@ -387,4 +382,14 @@ body {
 	background: #F4F4FD;
 	cursor: pointer;
 
+}
+
+/* title */
+.subject-portfolio {
+	font-style: normal;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	color: #2E2F42;
 }
