--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,17 @@ body {
 	color: #2E2F42;
 }
 
+/* p  */
+.paragraph-text {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+	letter-spacing: 0.02em;
+	color: #434455;
+
+}
 
 
 
