--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ body {
 
 /* footer */
 .portfolio {
-	background: #2E2F42;
+	background-color: #2E2F42;
 }
 
 
@@ -452,4 +452,18 @@ body {
 	letter-spacing: 0.02em;
 	color: #F4F4FD;
 
+}
+
+.footer {
+	background-color: #2E2F42;
+
+}
+
+.main-footer {
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #FFFFFF;
 }
